# my_bike_store

./: .env.sample  .gitignore  README.md  config.ini.sample  pyproject.toml  requirements.txt  utils.py
apps/catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_version.py  0003_alter_product_category_alter_version_product.py  0004_product_owner.py  0005_alter_product_options_product_is_published.py
apps/journal/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/journal/migrations/: 0001_initial.py  0002_alter_articles_count_views_alter_articles_image.py  0003_alter_articles_count_views_alter_articles_image.py  0004_articles_owner.py
apps/main/: urls.py  views.py
apps/users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_token.py
apps/users/templatetags/: check_group.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: catalog_category_data.json  catalog_product_data.json
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/catalog/: 001_categories_data.json  002_products_data.json  003_versions_data.json  catalog_category_data.json
fixtures/journal/: 001_articles.json  001_articles_data.json
fixtures/users/: group.json
journal/: admin.py  forms.py  models.py  urls.py  views.py
journal/migrations/: 0001_initial.py
main/: urls.py  views.py
(+48 files in other folders)
