[tool.poetry]
name = "my-store"
version = "0.1.0"
description = ""
authors = ["Valera K <vk1337atliberty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
django = "^5.0.4"
pillow = "^10.3.0"
pytils = "^0.4.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
